<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodentable"
    tools:context=".MainGameActivity">

    <RelativeLayout
        android:id="@+id/realtivelayout_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/title_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/germania_one"
            android:gravity="fill_horizontal"
            android:paddingTop="10dp"
            android:text="@string/announcementMade"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/announcement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_announcement"
            android:layout_gravity="center_horizontal|fill_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:gravity="fill_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/noChoice"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/p1_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/p1_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/points"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/p4_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/p2_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/p4_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/points"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/p2_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/points"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/p3_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/p3_points"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/germania_one"
                    android:text="@string/points"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/chooseGame"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_green_dark"
            android:fontFamily="@font/germania_one"
            android:text="@string/announcement"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>